fixed text align for about and solutions page

--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-footer{
-  font-family: 'Montserrat', sans-serif !important;
-}
-footer a{
-  text-decoration: none !important;
-  font-family: inherit !important;
-  color: inherit !important;
-}
 button{
   font-family: 'Montserrat' !important;
 }
